--- a/public/main.css
+++ b/public/main.css
@@ -17,7 +17,7 @@ body {
     position: absolute;
     font-family: Consolas;
     left: 100px;
-    width: 1112px;
+    width: 1624px;
     height: 75px;
     top: 25px;
     text-align: center;
@@ -30,8 +30,8 @@ body {
     left: 400px;
     top: 100px;
     background: blue;
-    width: 512px;
-    height: 512px;
+    width: 1024;
+    height: 1024;
     display: block;
 }
 
@@ -44,7 +44,7 @@ body {
     top: 100px;
     font-family: Consolas;
     width: 290px;
-    height: 502px;
+    height: 1014px;
     overflow-y: auto;
 }
 
@@ -61,11 +61,11 @@ body {
     background: rgb(48, 41, 17);
     color: white;
     position: absolute;
-    left: 912px;
+    left: 1424px;
     top: 100px;
     font-family: Consolas;
     width: 290px;
-    height: 502px;
+    height: 1014px;
     overflow-y: auto;
 }
 
@@ -85,23 +85,11 @@ body {
   padding-right: 10px;
 }
 
-#score-div {
-    position: absolute;
-    left: 400px;
-    top: 100px;
-    width: 502px;
-    font-size: 30pt;
-    font-weight: bold;
-    font-family: Consolas;
-    text-align: right;
-    color: white;
-}
-
 #data-left-div {
     position: absolute;
     left: 410px;
     top: 105px;
-    width: 512px;
+    width: 1024;
     font-size: 14pt;
     font-weight: bold;
     font-family: Consolas;
@@ -113,7 +101,7 @@ body {
     position: absolute;
     left: 400px;
     top: 105px;
-    width: 502px;
+    width: 1014px;
     font-size: 14pt;
     font-weight: bold;
     font-family: Consolas;
