--- a/public/main.css
+++ b/public/main.css
@@ -56,6 +56,11 @@ body {
     color: gray;
 }
 
+#seed {
+    width: 113px;
+    text-align: right;
+}
+
 #debug{
     padding: 5px;
     background: rgb(48, 41, 17);
